corrected overlapping of back-button

--- a/activities/Tangram.activity/css/activity.css
+++ b/activities/Tangram.activity/css/activity.css
@@ -146,7 +146,6 @@ p {
 	width: 65px;
 	height: 65px;
 	cursor: pointer;
-	z-index: 3;
 }
 
 #spinner {
